# radio-stations-data-collection

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: verify.yaml
data_collectors/: __init__.py  logs.py  main.py  scheduler_builder.py
data_collectors/app/: jobs.py  jobs_loader.py  ops.py  utils.py
data_collectors/charts_creation/: charts_creation_consts.py  charts_creation_utils.py  charts_creator.py  multi_charts_creator.py  playlist_description_builder.py  run_charts_creation.py
data_collectors/charts_creation/covers/: cover_creator.py  covers_consts.py  image_text.py
data_collectors/components/: __init__.py  component_factory.py  environment_component_factory.py  sessions_component_factory.py  tools_component_factory.py
data_collectors/components/analyzers/: analyzers_component_factory.py
data_collectors/components/collectors/: __init__.py  billboard_collectors_component_factory.py  charts_collectors_component_factory.py  collectors_component_factory.py  curations_collections_component_factory.py  genius_collectors_component_factory.py  google_collectors_component_factory.py  miscellaneous_collectors_factory.py  musixmatch_collectors_component_factory.py  openai_collectors_component_factory.py  radio_charts_collectors_component_factory.py  shazam_collectors_component_factory.py  spotify_collectors_component_factory.py  wikipedia_collectors_component_factory.py
data_collectors/components/deleters/: deleters_component_factory.py
data_collectors/components/exporters/: exporters_component_factory.py
data_collectors/components/inserters/: __init__.py  billboard_inserters_component_factory.py  curations_inserters_component_factory.py  inserters_component_factory.py  shazam_inserters_compoent_factory.py  spotify_inserters_component_factory.py
data_collectors/components/managers/: __init__.py  (+14 more)
data_collectors/consts/: audio_features_consts.py  billboard_consts.py  charts_consts.py  datetime_consts.py  eurovision_consts.py  every_hit_consts.py  general_consts.py  genius_consts.py  glglz_consts.py  google_consts.py  image_gender_detector_consts.py  milvus_consts.py  musixmatch_consts.py  openai_consts.py  radio_charts_consts.py  shazam_consts.py  shazam_matches_exporter_consts.py  spotify_consts.py  wikipedia_consts.py
data_collectors/contract/: __init__.py  analyzer_interface.py  base_database_inserter.py  base_database_updater.py  base_search_collector.py  collector_interface.py  database_deleter_interface.py  database_updater_interface.py  exporter_interface.py  manager_interface.py  serializer_interface.py
data_collectors/inserters/: __init__.py  base_database_inserter.py  base_ids_database_inserter.py  spotify_insertions_manager.py
data_collectors/jobs/: base_job_builder.py  constant_logging_job_builder.py  job_id.py  jobs_loader.py  radio_snapshots_job_builder.py  shazam_top_tracks_job_builder.py  status_reporter_job_builder.py
data_collectors/logic/: __init__.py
data_collectors/tools/: __init__.py  aio_pool_executor.py  genius_client.py  google_search_client.py  google_search_config.py  josie_client.py  rapid_api_client.py  translation_adapter.py  web_elements_extractor.py
data_collectors/utils/: charts.py  datetime.py  gemini.py  genius.py  glglz.py  os.py  playwright.py  selenium.py  spotify.py
tests/: conftest.py  test_artists_insights_manager.py  test_genius_artists_ids_manager.py  test_radio_snapshots_manager.py  test_scheduled_job_failure.py  test_shazam_top_tracks_manager.py  test_spotify_charts_manager.py  test_wikipedia_summaries_manager.py  testing_utils.py
tests/charts/: test_eurovision_charts_manager.py  test_glglz_charts_manager.py
tests/components/: test_sessions_component_factory.py
tests/helpers/: genius_artist_resources.py  mock_generate_content_response.py  shazam_track_resources.py  spotify_playlists_resources.py  spotify_track_resources.py
tests/playlists_charts/: base_playlists_charts_test.py  test_billboard_charts_manager.py  test_mako_hit_list_chart_manager.py  test_spotify_charts_manager.py
tests/tools/: playlists_resources_creator.py  playwright_container.py  playwright_testkit.py  shazam_insertions_verifier.py  spotify_insertions_verifier.py  wikipedia_test_client.py
tests/utils/: test_spotify_utils.py
(+378 files in other folders)
