[tool.poetry]
name = "data_collectors"
version = "0.1.0"
description = ""
authors = ["nirgodin <70273595+nirgodin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
genie-datastores = {git = "https://github.com/nirgodin/genie-datastores.git", rev = "1e4ab53f", extras = ["postgres", "milvus", "google_drive", "google_sheets", "mongo"]}
spotipyio = {git = "https://github.com/nirgodin/spotipyio.git", rev = "d1fc6d4a"}
shazamio = ">=0.6.0,<0.7"
asyncio-pool = "^0.6.0"
tqdm = ">=4.65.0,<5.0"
wikipedia-api = ">0.5,<0.6"
openpyxl = "^3.1.2"
beautifulsoup4 = ">=4.12.2,<4.13"
async-lru = ">=2.0.4,<3.0"
nltk = ">=3.8.1,<4.0"
pytest-playwright = ">=0.4.4,<1.0"
langid = ">=1.1.6,<1.2"
scikit-learn = ">=1.4.2,<1.5"
openai = ">=1.28.0,<1.29"
google-generativeai = ">=0.6,<1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
