[tool.poetry]
name = "data_collectors"
version = "0.1.0"
description = ""
authors = ["nirgodin <70273595+nirgodin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
genie-datastores = { git = "https://github.com/nirgodin/genie-datastores.git", rev = "2ccaf614", extras = ["postgres", "milvus", "google_drive", "google_sheets", "mongo"] }
spotipyio = { version = ">=1.1.1,<2", extras = ["redis"] }
shazamio = ">=0.6.0,<0.7"
asyncio-pool = "^0.6.0"
tqdm = ">=4.65.0,<5.0"
wikipedia-api = ">0.5,<0.6"
openpyxl = "^3.1.2"
beautifulsoup4 = ">=4.12.2,<4.13"
async-lru = ">=2.0.4,<3.0"
nltk = ">=3.8.1,<4.0"
pytest-playwright = ">=0.4.4,<1.0"
langid = ">=1.1.6,<1.2"
scikit-learn = ">=1.4.2,<1.5"
openai = ">=1.28.0,<1.29"
google-generativeai = ">=0.6,<1"
apscheduler = ">=3.11.0,<4"
fastapi = "0.115.6"
starlette = "0.41.3"
uvicorn = "0.32.1"
gunicorn = ">=23.0.0,<24"
lxml = ">=5.3.1,<6"
tenacity = ">=9.1.2,<10"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.2,<9.0"
pytest-asyncio = ">=0.21.1,<0.22"
pytest-cov = ">=5.0.0,<6"
aioresponses = ">=0.7.7,<1"
responses = ">=0.25.7,<1"
spotipyio = { version = "*", extras = ["testing"] }
genie-datastores = { git = "https://github.com/nirgodin/genie-datastores.git", rev = "2ccaf614", extras = ["postgres-testing"] }
black = ">=24.8.0,<25"
ruff = ">=0.6.8,<1"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
markers = ["asyncio: mark a test as an asyncio coroutine"]
addopts = "--asyncio-mode=auto"

[tool.black]
line-length = 120

[tool.ruff]
lint.ignore = [
    "F403", # unable to detect undefined names
    "F405", # may be undefined, or defined from star imports
    "E712", # Avoid equality comparisons to `False`
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
